# oh-my-design-patterns

./: .gitignore  README.md  SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  suggestion.md
cpp/: .gitignore  CMakeLists.txt
cpp/abstract_factory/: CMakeLists.txt  main.cpp
cpp/adapter/: CMakeLists.txt  main.cpp
cpp/builder/: CMakeLists.txt  main.cpp
cpp/chain_of_responsibility/: CMakeLists.txt  main.cpp
cpp/decorator/: CMakeLists.txt  main.cpp
cpp/facade/: CMakeLists.txt  main.cpp
cpp/factory_method/: CMakeLists.txt  main.cpp
cpp/flyweight/: CMakeLists.txt  main.cpp
cpp/iterator/: CMakeLists.txt  main.cpp
cpp/memento/: CMakeLists.txt  main.cpp
cpp/observer/: CMakeLists.txt  main.cpp
cpp/prototype/: CMakeLists.txt  main.cpp
cpp/proxy/: CMakeLists.txt  main.cpp
cpp/singleton/: CMakeLists.txt  main.cpp
cpp/state/: CMakeLists.txt  main.cpp
cpp/strategy/: CMakeLists.txt  main.cpp
cpp/template/: CMakeLists.txt  main.cpp
cpp/visitor/: CMakeLists.txt  main.cpp
src/io/innofang/: README.md
src/io/innofang/AbstractFactory/: CakeCream.java  CakeFactory.java  CakeStyle.java  Client.java  HeartStyle.java  MangoCream.java  MangoHeartCake.java  MangoSquareCake.java  README.md  SquareStyle.java  Test.java  (+2 more)
第 1 部分 创建型（Creational）/: 1.工厂方法模式.md  2.抽象工厂模式.md  3.建造者模式.md  4.原型模式.md  5.单例模式.md
第 2 部分 结构型（Structural）/: 2.装饰模式.md  4.享元模式.md
第 3 部分 行为型（Behavioral）/: 2.责任链模式.md  3.迭代器模式.md  6.状态模式.md  7.策略模式.md  8.访问者模式.md
结构型（Structural）/: 1.适配器模式.md  3.外观模式.md  5.代理模式.md
行为型（Behavioral）/: 1.模板方法模式.md  4.备忘录模式.md  5.观察者模式.md
(+481 files in other folders)
